tests/miniJava/neg/003038_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = void [ 0 ] ; } }
